[package]
name = "app-thermometer"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.6"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-graphics = "0.7.1"
hx1230 = "0.3.2"
embedded-sdmmc = "0.3.0"
pcf8563 = "0.1.2"
bmp280-rs = "0.1.1"
lib-datalogger = { path = "../../lib/lib-datalogger" }

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f411"]

[dependencies.arrayvec]
version = "0.7.2"
default-features = false

[dependencies.dht11]
version = "0.3.1"
features = ["dwt"]